syntax = "proto3";
package raft;

service Raft {
  rpc RequestVote (VoteRequest) returns (VoteResponse);
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}

message VoteRequest {
  uint64 term = 1;
  string candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message VoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  string leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  uint64 leader_commit = 6;
}

message LogEntry {
  Command command = 1;
  uint64 term = 2;
}

message Command {
  enum CommandType {
    GET = 0;
    PUT = 1;
  }
  CommandType type = 1;
  string key = 2;
  int64 value = 3;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}